@startuml

title __PRINTER's Class Diagram__\n

  namespace com.example.hi_library {
    namespace log {
      namespace printer {
        class com.example.hi_library.log.printer.HiConsolePrinter {
            + print()
        }
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      namespace printer {
        interface com.example.hi_library.log.printer.HiLogPrinter {
            {abstract} + print()
        }
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      namespace printer {
        class com.example.hi_library.log.printer.HiViewPrinter {
            - recyclerView : RecyclerView
            + HiViewPrinter()
            + getViewProvider()
            + print()
        }
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      namespace printer {
        class com.example.hi_library.log.printer.HiViewPrinter.LogAdapter {
            - layoutInflater : LayoutInflater
            - logs : List<HiLogMo>
            + LogAdapter()
            + getItemCount()
            + onBindViewHolder()
            + onCreateViewHolder()
            ~ addItem()
            - getHighlightColor()
        }
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      namespace printer {
        class com.example.hi_library.log.printer.HiViewPrinter.LogViewHolder {
            ~ messageView : TextView
            ~ tagView : TextView
            + LogViewHolder()
        }
      }
    }
  }
  

  namespace com.example.hi_library {
    namespace log {
      namespace printer {
        class com.example.hi_library.log.printer.HiViewPrinterProvider {
            {static} - TAG_FLOATING_VIEW : String
            {static} - TAG_LOG_VIEW : String
            - floatingView : View
            - isOpen : boolean
            - logView : FrameLayout
            - recyclerView : RecyclerView
            - rootView : FrameLayout
            + HiViewPrinterProvider()
            + closeFloatingView()
            + showFloatingView()
            - closeLogView()
            - genFloatingView()
            - genLogView()
            - showLogView()
        }
      }
    }
  }
  

  com.example.hi_library.log.printer.HiConsolePrinter .up.|> com.example.hi_library.log.printer.HiLogPrinter
  com.example.hi_library.log.printer.HiViewPrinter .up.|> com.example.hi_library.log.printer.HiLogPrinter
  com.example.hi_library.log.printer.HiViewPrinter o-- com.example.hi_library.log.printer.HiViewPrinter.LogAdapter : adapter
  com.example.hi_library.log.printer.HiViewPrinter o-- com.example.hi_library.log.printer.HiViewPrinterProvider : viewProvider
  com.example.hi_library.log.printer.HiViewPrinter +-down- com.example.hi_library.log.printer.HiViewPrinter.LogAdapter
  com.example.hi_library.log.printer.HiViewPrinter +-down- com.example.hi_library.log.printer.HiViewPrinter.LogViewHolder
  com.example.hi_library.log.printer.HiViewPrinter.LogAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.hi_library.log.printer.HiViewPrinter.LogViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
